--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -3,7 +3,7 @@
     <p>How many times did you today?</p>
 
 
-    <select class="timesChoice" ng-model="newMessages">
+    <select class="timesChoice" ng-model="newData">
         <option value="0">0</option>
         <option value="1">1</option>
         <option value="2">2</option>
@@ -11,7 +11,7 @@
         <option value="4">4</option>
         <option value="5">5</option>
     </select>
-    <button ng-click="timesFun(newMessage)">Submit></button>
+    <button ng-click="timesFun(newData)">Submit></button>
 
 
 
