--- a/js/pageThree/pageThreeTmpl.html
+++ b/js/pageThree/pageThreeTmpl.html
@@ -2,7 +2,7 @@
 <div>
 <form action="">
 
-    <div class="contain" ng-controller="pageThreeCtrl">
+    <div class="" ng-controller="pageThreeCtrl">
         <p class="question">How did your stomach feel today?</p>
         <div class="the-faces">
             <input id="not-good" type="radio" name="faced" value="1" ng-model="newData"/>
