--- a/js/pageTwo/pageTwoTmpl.html
+++ b/js/pageTwo/pageTwoTmpl.html
@@ -6,5 +6,5 @@
     <label for="{{i.id}}">milk</label><input id="{{i.id}}" ng-model="i.newData" type="range" min="0" max="10"/><label for="{{i.id}}">metal</label><br/>
     {{i.newData}}<br/>
 </div>
-    <button ng-click="conFun()"><a href="/#/pageThree">Submit</a></button>
+    <button class="submit" ng-click="conFun()"><a href="/#/pageThree">Submit</a></button>
 </div>
