working on getting data

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular-route.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
     <!--css-->
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
@@ -34,5 +36,6 @@
 <script src="js/pageThree/pageThreeService.js"></script>
 <script src="js/login/loginCtrl.js"></script>
 <script src="js/login/loginService.js"></script>
+<script src="js/data/dataCtrl.js"></script>
 </body>
 </html>
