added firebase login

--- a/js/charts/chartTmpl.html
+++ b/js/charts/chartTmpl.html
@@ -11,7 +11,7 @@
 
 </style>
 <div class="chart">
-    <div style="width: 40px;">4</div>
+    <div label="" style="width: 40px;">4</div>
     <div style="width: 80px;">8</div>
     <div style="width: 150px;">15</div>
     <div style="width: 160px;">16</div>
