--- a/js/data/dataTmpl.html
+++ b/js/data/dataTmpl.html
@@ -22,7 +22,7 @@
 
 </style>
 <div class="chart">
-    <div style="width: ({{item.times.times}} * 10)px;">{{item.times.times}}</div>
+    <div label="" style="width: ({{item.times.times}} * 10)px;">{{item.times.times}}</div>
     <div style="width: 80px;">8</div>
     <div style="width: 150px;">15</div>
     <div style="width: 160px;">16</div>
