tracking only the current users data

--- a/js/pageThree/pageThreeTmpl.html
+++ b/js/pageThree/pageThreeTmpl.html
@@ -15,7 +15,7 @@
             <label class="faces great" for="great"></label>
         </div>
 
-        <button class="submit"  ng-click="stomachFun()"><a href="/#/charts">Submit</a></button>
+        <button class="submit"  ng-click="stomachFun()"><a href="/#/data">Submit</a></button>
 
     </div>
 </form>
