working on the styles

--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
 <script src="js/login/loginCtrl.js"></script>
 <script src="js/login/loginService.js"></script>
 <script src="js/data/dataCtrl.js"></script>
+<script src="js/charts/chartCtrl.js"></script>
+<script src="js/charts/chart.js"></script>
 </body>
 </html>
