--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="pageOneCtrl">
 
- <div class="consistency">
+ <div class="timesContain">
     <p class="question">How many times did you today?</p>
     <select class="timesChoice" ng-model="numberTimes" style="height:50px;">
         <option value="0">0</option>
