added index label on slide bars

--- a/js/pageTwo/pageTwoTmpl.html
+++ b/js/pageTwo/pageTwoTmpl.html
@@ -4,7 +4,8 @@
 <div ng-controller="pageTwoCtrl" >
 <div ng-repeat="i in selectorList"  class="consistency">
     <label for="{{i.id}}">milk</label><input class="conSelector" id="{{i.id}}" ng-model="i.newData" type="range" min="0" max="10"/><label for="{{i.id}}">metal</label><br/>
-    {{i.newData}}<br/>
+   {{i.newData}}<br/>
+    <p>What was the consistency of your {{$index + 1}} movement?</p>
 </div>
     <button class="submit" ng-click="conFun()"><a href="/#/pageThree">Submit</a></button>
 </div>
