CHARTSgit add .git add .

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular-route.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
     <!--css-->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
+    <script type='text/javascript' src='js/bower_components/angular/angular.min.js'></script>
+    <script type='text/javascript' src='js/bower_components/d3/d3.min.js'></script>
+    <script src="js/bower_components/angular-charts/dist/angular-charts.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body>
 <header class="header">
@@ -37,6 +41,7 @@
 <script src="js/login/loginCtrl.js"></script>
 <script src="js/login/loginService.js"></script>
 <script src="js/data/dataCtrl.js"></script>
+<script src="js/charts/chartCtrl.js"></script>
 
 </body>
 </html>
