--- a/js/charts/chartTmpl.html
+++ b/js/charts/chartTmpl.html
@@ -1,25 +1,31 @@
 <div ng-controller="chartCtrl">
 
     <style type="text/css">
-        body {
-            font-family: "helvetica";
-            color : #333;
-        }
-        [ac-chart] {
-            float:left;
-            width: 48%;
-            height: 400px;
-            margin: 0 1%;
+        /*body {*/
+            /*font-family: "helvetica";*/
+            /*color : #333;*/
+        /*}*/
+        /*[ac-chart] {*/
+            /*float:left;*/
+            /*width: 48%;*/
+            /*height: 400px;*/
+            /*margin: 0 1%;*/
+        /*}*/
+
+        .chart {
+            width: 500px;
+            height: 500px;
         }
     </style>
-    <div id="chart1" ac-chart="chartType" ac-data="data" ac-config="config1"></div>
-
+    <!--<div id="chart1" ac-chart="chartType" ac-data="data" ac-config="config1"></div>-->
+    <div
+            data-ac-chart="'bar'"
+            data-ac-data="data"
+            data-ac-config="config"
+            class="chart">
+    </div>
     <style>
-        .ac-tooltip {
-            color: black;
-            border: 2px solid rgba(200,200,0,0.8);
-            background-color: rgba(200,200,0,0.5);
-        }
+
         #chart1 .ac-legend-box {
             border-radius: 10px;
         }
