added some links and another colum on graph

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <a href="/#/pageOne">one</a>
     <a href="/#/pageTwo">two</a>
     <a href="/#/pageThree">three</a>
+    <a href="/#/charts">Charts</a>
+    <a href="/#/data">data</a>
 </header>
 
 <div>
