changing to buttons

--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -3,6 +3,10 @@
 
  <div class="timesContain">
     <p class="question">How many times did you today?</p>
+     <button ng-click="setValue(0)">0</button>
+     <button ng-click="setValue(1)">1</button>
+     <button ng-click="setValue(2)">2</button>
+     <button ng-click="setValue(3)">3</button>
     <select class="timesChoice" ng-model="numberTimes" style="height:50px;">
         <option value="0">0</option>
         <option value="1">1</option>
