working on styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
     <!--css-->
 
-    <script type='text/javascript' src='js/bower_components/angular/angular.min.js'></script>
+    <!--<script type='text/javascript' src='js/bower_components/angular/angular.min.js'></script>-->
     <script type='text/javascript' src='js/bower_components/d3/d3.min.js'></script>
     <script src="js/bower_components/angular-charts/dist/angular-charts.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
@@ -21,7 +21,7 @@
 </head>
 <body>
 <header class="header">
-    <h1 class="headerChild">iPoop</h1>
+    <h1 class="headerChild appName">iPoop</h1>
     <a  class="headerChild" href="/#/pageOne">one</a>
     <a  class="headerChild" href="/#/pageTwo">two</a>
     <a  class="headerChild" href="/#/pageThree">three</a>
