--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -2,25 +2,19 @@
 <div ng-controller="pageOneCtrl">
 
  <div class="timesContain">
-    <p class="question">How many times did poop you today?</p>
+    <p class="question">How many times did you poop today?</p>
     <div class="buttonContain">
-     <button class="timeButton" ng-click="setValue(0)"><a href="/#/pageTwo">0</a></button>
-     <button class="timeButton" ng-click="setValue(1)"><a href="/#/pageTwo">1</a></button>
-     <button class="timeButton" ng-click="setValue(2)"><a href="/#/pageTwo">2</a></button>
-     <button class="timeButton" ng-click="setValue(3)"><a href="/#/pageTwo">3</a></button>
-     <button class="timeButton" ng-click="setValue(4)"><a href="/#/pageTwo">4</a></button>
-     <button class="timeButton" ng-click="setValue(5)"><a href="/#/pageTwo">5</a></button>
+     <button class="timeButton" ng-click="setValue(0)"><a href="/#/pageTwo"><p class="timeText">0</p></a></button>
+     <button class="timeButton" ng-click="setValue(1)"><a href="/#/pageTwo"><p class="timeText">1</p></a></button>
+        <br/>
+     <button class="timeButton" ng-click="setValue(2)"><a href="/#/pageTwo"><p class="timeText">2</p></a></button>
+     <button class="timeButton" ng-click="setValue(3)"><a href="/#/pageTwo"><p class="timeText">3</p></a></button>
+        <br/>
+     <button class="timeButton" ng-click="setValue(4)"><a href="/#/pageTwo"><p class="timeText">4</p></a></button>
+     <button class="timeButton" ng-click="setValue(5)"><a href="/#/pageTwo"><p class="timeText">5</p></a></button>
     </div>
 
-    <!--<select class="timesChoice" ng-model="numberTimes" style="height:50px;">-->
-        <!--<option value="0">0</option>-->
-        <!--<option value="1">1</option>-->
-        <!--<option value="2">2</option>-->
-        <!--<option value="3">3</option>-->
-        <!--<option value="4">4</option>-->
-        <!--<option value="5">5</option>-->
-    <!--</select><br/>-->
-    <!--<button class="submit" ng-click="timesFun()"><a href="/#/pageTwo">submit</a></button>-->
+
 </div>
 
 
