finished styling working on ng show for data

--- a/js/charts/chartTmpl.html
+++ b/js/charts/chartTmpl.html
@@ -1,24 +1,14 @@
+<button class="pageLink"><a class="submitLink" href="/#/data">Data</a></button>
+
+
 <div ng-controller="chartCtrl">
 
-    <style type="text/css">
 
-
-        .chart {
-            width: 700px;
-            height: 500px;
-            font-size: 10px;
-        }
-    </style>
     <div
             data-ac-chart="'bar'"
             data-ac-data="data"
             data-ac-config="config"
             class="chart">
     </div>
-    <style>
 
-        #chart1 .ac-legend-box {
-            border-radius: 10px;
-        }
-    </style>
 </div>
