--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -1,4 +1,7 @@
-
+<div class="pageOneLinks">
+   <button class="pageLink"><a class="submitLink" href="/#/data">Data</a></button>
+    <button class="pageLink"><a class="submitLink" href="/#/charts">Chart</a></button>
+</div>
 <div ng-controller="pageOneCtrl">
 
  <div class="timesContain">
