--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <script src="js/login/loginService.js"></script>
 <script src="js/data/dataCtrl.js"></script>
 <script src="js/charts/chartCtrl.js"></script>
+<script src="js/charts/chartCtrlTwo.js"></script>
 <script src="animations.js"></script>
 
 </body>
