--- a/js/pageThree/pageThreeTmpl.html
+++ b/js/pageThree/pageThreeTmpl.html
@@ -6,23 +6,14 @@
         <p class="question">How did your stomach feel today?</p>
         <p class="details">On a scale of 1 through 4, 1 being not good 4 being great</p>
         <div class="the-faces">
-            <span class="faceLabel"></span>
-            <input id="not-good" type="radio" name="faced" value="1" ng-model="newData"/>
-            <label class="faces not-good" for="not-good"></label>
-            <span class="faceLabel"></span>
-            <input id="ok" type="radio" name="faced" value="2"  ng-model="newData"/>
-            <label class="faces ok"for="ok"></label>
-            <span class="faceLabel"></span>
-            <input id="good" type="radio" name="faced" value="3" ng-model="newData"/>
-            <label class="faces good" for="good"></label>
-            <span class="faceLabel"></span>
-            <input id="great" type="radio" name="faced" value="4" ng-model="newData"/>
-            <label class="faces great" for="great"></label>
+            <a href="/#/data"><button class="faces not-goods" ng-click="setValue(1)"></button></a>
+            <a href="/#/data"><button class="faces ok" ng-click="setValue(2)"></button></a>
+            <a href="/#/data"><button class="faces good" ng-click="setValue(3)"></button></a>
+            <a href="/#/data"><button class="faces great" ng-click="setValue(4)"></button></a>
+
         </div>
 
-        <button class="conSubmit submitLink"  ng-click="stomachFun()"><a href="/#/data">Submit</a></button>
 
     </div>
 </form>
-
     </div>
