--- a/js/charts/chartTmpl.html
+++ b/js/charts/chartTmpl.html
@@ -1,4 +1,5 @@
-<button class="pageLink"><a class="submitLink" href="/#/data">Data</a></button>
+<button class="pageLink"><a class="submitLink" href="/#/data">See Data</a></button>
+<button class="pageLink"><a class="submitLink" href="/#/pageOne">Log Data</a></button>
 
 <div ng-controller="chartCtrl">
     <div ng-show="!showChart">
