--- a/js/pageThree/pageThreeTmpl.html
+++ b/js/pageThree/pageThreeTmpl.html
@@ -6,10 +6,10 @@
         <p class="question">How did your stomach feel today?</p>
         <p class="details">On a scale of 1 through 4, 1 being not good 4 being great</p>
         <div class="the-faces">
-            <a href="/#/data"><button class="faces not-goods" ng-click="setValue(1)"></button></a>
-            <a href="/#/data"><button class="faces ok" ng-click="setValue(2)"></button></a>
-            <a href="/#/data"><button class="faces good" ng-click="setValue(3)"></button></a>
-            <a href="/#/data"><button class="faces great" ng-click="setValue(4)"></button></a>
+            <a href="/#/charts"><button class="faces not-goods" ng-click="setValue(1)"></button></a>
+            <a href="/#/charts"><button class="faces ok" ng-click="setValue(2)"></button></a>
+            <a href="/#/charts"><button class="faces good" ng-click="setValue(3)"></button></a>
+            <a href="/#/charts"><button class="faces great" ng-click="setValue(4)"></button></a>
 
         </div>
 
