changed some layouts

--- a/js/charts/chartTmpl.html
+++ b/js/charts/chartTmpl.html
@@ -1,6 +1,7 @@
+<div class="pageLinks">
 <button class="pageLink"><a class="submitLink" href="/#/data">See Data</a></button>
-<button class="pageLink"><a class="submitLink" href="/#/pageOne">Log Data</a></button>
-
+<button class="pageLink"><a class="submitLink" href="/#/pageOne">Record Data</a></button>
+</div>
 <div ng-controller="chartCtrl">
     <div ng-show="!showChart">
         <button class="lastWeek" ng-click="toggleChart()">Hide Last 7 Days</button>
