--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -1,6 +1,6 @@
-<div class="pageOneLinks">
-   <button class="pageLink"><a class="submitLink" href="/#/data">Data</a></button>
-    <button class="pageLink"><a class="submitLink" href="/#/charts">Chart</a></button>
+<div class="">
+   <button class="pageLink"><a class="submitLink" href="/#/data">View Data</a></button>
+    <button class="pageLink"><a class="submitLink" href="/#/charts">View Chart</a></button>
 </div>
 <div ng-controller="pageOneCtrl">
 
