--- a/js/pageTwo/pageTwoTmpl.html
+++ b/js/pageTwo/pageTwoTmpl.html
@@ -8,7 +8,7 @@
 
     <p class="conLabelOne">1</p><input class="conSelector" id="{{i.id}}" ng-model="i.newData" type="range" min="0" max="10"/><p class="conLabelTwo" for="{{i.id}}">10</p><br/>
   <br/>
-    <p class="conQuestion">What was the consistency of your number {{$index + 1}} movement?</p>
+    <p class="conQuestion">What was the consistency of movement #{{$index + 1}}?</p>
 </div>
     <button class="conSubmit" ng-click="conFun()"><a class="submitLink" href="/#/pageThree">Submit</a></button>
 </div>
