minor chart changes

--- a/js/charts/chartTmpl.html
+++ b/js/charts/chartTmpl.html
@@ -1,5 +1,5 @@
 <div class="pageLinks">
-<button class="pageLink"><a class="submitLink" href="/#/data">See Data</a></button>
+<button class="pageLink"><a class="submitLink" href="/#/data">View Data</a></button>
 <button class="pageLink"><a class="submitLink" href="/#/pageOne">Record Data</a></button>
 </div>
 <div ng-controller="chartCtrl">
@@ -29,5 +29,7 @@
     </div>
 
 </div>
+    <div class="chart">
     <button class="lastWeek" ng-show="!showChart" ng-click="toggleChart()">Show Previous Week</button>
+</div>
 </div>
