--- a/js/data/dataTmpl.html
+++ b/js/data/dataTmpl.html
@@ -1,6 +1,6 @@
 <div class="pageLinks">
-        <button class="pageLink dataLink"><a class="submitLink" href="/#/charts">See Chart</a></button>
-        <button class="pageLink dataLink"><a class="submitLink " href="/#/pageOne">Record Data</a></button>
+    <button class="pageLink"><a class="submitLink" href="/#/charts">View Chart</a></button>
+    <button class="pageLink"><a class="submitLink" href="/#/pageOne">Record Data</a></button>
 </div>
 <div ng-controller="dataCtrl">
     <div class="dataContain">
