--- a/js/pageOne/pageOneTmpl.html
+++ b/js/pageOne/pageOneTmpl.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="pageLinks">
    <button class="pageLink"><a class="submitLink" href="/#/data">View Data</a></button>
     <button class="pageLink"><a class="submitLink" href="/#/charts">View Chart</a></button>
 </div>
